// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectTeaser does not render the description by default 1`] = `
<styled.a
  href="bp.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <styled.div
    alt="Skateistan Afghanistan"
  />
  <styled.h2
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <styled.div>
    <styled.div>
      <div>
        <span>
          ,
        </span>
         
      </div>
      <div>
        <span />
         
        Spenden
      </div>
      <div>
        <span>
          NaN
        </span>
         
        fehlen noch
      </div>
    </styled.div>
    <styled.img
      alt="Skateistan"
    />
  </styled.div>
  <styled.div>
    <div
      className="bar"
    />
  </styled.div>
</styled.a>
`;

exports[`ProjectTeaser does render the description if showDescription is true 1`] = `
<styled.a
  href="bp.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <styled.div
    alt="Skateistan Afghanistan"
  />
  <styled.h2
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <styled.div
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is amazing",
      }
    }
  />
  <styled.div>
    <styled.div>
      <div>
        <span>
          ,
        </span>
         
      </div>
      <div>
        <span />
         
        Spenden
      </div>
      <div>
        <span>
          NaN
        </span>
         
        fehlen noch
      </div>
    </styled.div>
    <styled.img
      alt="Skateistan"
    />
  </styled.div>
  <styled.div>
    <div
      className="bar"
    />
  </styled.div>
</styled.a>
`;

exports[`ProjectTeaser renders 1`] = `
<styled.a
  href="bp.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <styled.div
    alt="Skateistan Afghanistan"
  />
  <styled.h2
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <styled.div>
    <styled.div>
      <div>
        <span>
          ,
        </span>
         
      </div>
      <div>
        <span />
         
        Spenden
      </div>
      <div>
        <span>
          NaN
        </span>
         
        fehlen noch
      </div>
    </styled.div>
    <styled.img
      alt="Skateistan"
    />
  </styled.div>
  <styled.div>
    <div
      className="bar"
    />
  </styled.div>
</styled.a>
`;

exports[`ProjectTeaser uses a custom href if given 1`] = `
<styled.a
  href="coupons.org/p123"
  onClick={[Function]}
  target="_parent"
  title="Skateistan Afghanistan"
>
  <styled.div
    alt="Skateistan Afghanistan"
  />
  <styled.h2
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <styled.div>
    <styled.div>
      <div>
        <span>
          ,
        </span>
         
      </div>
      <div>
        <span />
         
        Spenden
      </div>
      <div>
        <span>
          NaN
        </span>
         
        fehlen noch
      </div>
    </styled.div>
    <styled.img
      alt="Skateistan"
    />
  </styled.div>
  <styled.div>
    <div
      className="bar"
    />
  </styled.div>
</styled.a>
`;
